[gd_scene load_steps=6 format=2]

[ext_resource path="res://Resources/Puzzles/Puzzle.tscn" type="PackedScene" id=1]
[ext_resource path="res://Resources/Objects/Circuit/CircuitVoltageSource.png" type="Texture" id=2]
[ext_resource path="res://Resources/Puzzles/Chapter II/VoltageSource/VoltageSource.gd" type="Script" id=3]
[ext_resource path="res://Resources/Objects/Circuit/plus.png" type="Texture" id=4]
[ext_resource path="res://Resources/Objects/Circuit/minus.png" type="Texture" id=5]

[node name="VoltageSource" instance=ExtResource( 1 )]
script = ExtResource( 3 )

[node name="Background" parent="." index="0"]
color = Color( 0.682353, 0.682353, 0.682353, 1 )

[node name="InstructionLabel" type="Label" parent="." index="2"]
margin_left = 14.9607
margin_top = 7.86798
margin_right = 441.961
margin_bottom = 39.868
text = "Calculate the value of the Voltage Source."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WarningLabel" type="Label" parent="." index="3"]
margin_left = 107.0
margin_top = 151.0
margin_right = 272.0
margin_bottom = 177.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VoltageValue" type="Label" parent="." index="4"]
margin_left = 90.5664
margin_top = 80.2408
margin_right = 111.566
margin_bottom = 97.2408
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="." index="5"]
position = Vector2( 125.579, 88.3238 )
scale = Vector2( 0.426263, 0.426263 )
texture = ExtResource( 2 )

[node name="VoltageUp" type="Button" parent="." index="6"]
margin_left = 93.0785
margin_top = 60.7369
margin_right = 121.079
margin_bottom = 82.7369
icon = ExtResource( 4 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VoltageDown" type="Button" parent="." index="7"]
margin_left = 94.1727
margin_top = 86.5877
margin_right = 122.173
margin_bottom = 108.588
icon = ExtResource( 5 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Submit" type="Button" parent="." index="8"]
margin_left = 37.3309
margin_top = 154.005
margin_right = 94.3309
margin_bottom = 174.005
text = "Submit"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="VoltageUp" to="." method="_on_VoltageUp_pressed"]
[connection signal="pressed" from="VoltageDown" to="." method="_on_VoltageDown_pressed"]
[connection signal="pressed" from="Submit" to="." method="_on_Submit_pressed"]
